# us-iran-war-market-impact-analysis

./: .env.example  .gitignore  LICENSE  README.md  findings_memo.md  main.py  pyproject.toml
data/: market_analysis.duckdb
data/processed/: mart_event_study_ready.csv
data/raw/: brent_oil_prices.csv  event_timeline.csv  macro_indicators.csv  market_prices.csv
dbt_project/market_analysis/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/market_analysis/models/marts/: mart_daily_market_summary.sql  mart_event_study_ready.sql  mart_market_with_events.sql
dbt_project/market_analysis/models/staging/: _sources.yml  stg_event_timeline.sql  stg_macro_indicators.sql  stg_market_prices.sql  stg_oil_prices.sql
notebooks/: 01_data_collection.ipynb  02_event_study.ipynb  test.ipynb
scripts/: export_gold.py  ingest_bronze.py
