[project]
name = "iran-war-market-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.4.1",
    "dbt-core>=1.12.0",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "fredapi>=0.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "polars>=1.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "yfinance>=1.5.1",
]
